workshop03/cs-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-deploy
  labels:
    app: codeserver
    name: cs-deploy
  namespace: cs
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: codeserver
      name: cs-po
  template:
    metadata:
      name: cs-po
      labels:
        app: codeserver
        name: cs-po
    spec:
      volumes:
      - name: workspace-vol
        persistentVolumeClaim:
          claimName: cs-pvc
      containers:
      - name: cs-container
        image: linuxserver/code-server:4.9.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: workspace-vol
          mountPath: /config/workspace
