workshop03/oauth2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-deploy
  labels:
    name: oauth2-deploy
    app: codeserver
  namespace: cs
spec:
  replicas: 1
  selector:
    matchLabels:
      name: oauth2-po
      app: codeserver
  template:
    metadata:
      name: oauth2-po
      labels:
        name: oauth2-po
        app: codeserver
    spec:
      containers:
      - name: oauth2-container
        image: bitnami/oauth2-proxy:7.2.1
        imagePullPolicy: IfNotPresent
        args:
        - --provider=github
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        ports:
        - containerPort: 4180
