workshop03/cs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-svc
  labels:
    name: cs-svc
    app: codeserver
  namespace: cs
spec:
  type: ClusterIP
  selector:
    name: cs-po
    app: codeserver
  ports:
  - port: 8443
    targetPort: 8443
